--- a/readme
+++ b/readme
@@ -1,2 +1,4 @@
-![alt text](https://github.com/vijetha-asam/Team22_Phase1_APIalchemist/blob/main/Overview.png?raw=true)
+
+
+<img width="30px" src="https://github.com/vijetha-asam/Team22_Phase1_APIalchemist/blob/main/Overview.png" alt="image_name png" />
 
